fix(theme-classic): fix gradient on Safari

--- a/packages/autocomplete-theme-classic/src/theme.scss
+++ b/packages/autocomplete-theme-classic/src/theme.scss
@@ -983,6 +983,8 @@ body {
     rgba(var(--aa-background-color-rgb), 0),
     rgba(var(--aa-background-color-rgb), 1)
   );
+  border-bottom-left-radius: calc(var(--aa-spacing) / 4);
+  border-bottom-right-radius: calc(var(--aa-spacing) / 4);
   bottom: 0;
 }
 
